--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -190,6 +190,7 @@
     &-autor{
         display: flex;
         align-items: center;
+        max-width: 245px;
         .avatar{
             width: 30px;
             height: 30px;
@@ -203,8 +204,13 @@
         span{
             font-size: 14px;
             font-weight: 500; 
+        }  
+    }
+    &-star{
+        font-size: 12px;
+        span{
+            color: $bg;
         }
-        
     }
 }
 .products__bottom-btn{
@@ -222,10 +228,38 @@
             color: #fff;
         }
     }
-
 }
-
 // end products
 
+// start product-slider
+.product-slider{
+    padding: 110px 0 120px;
+    .slick-dots{
+        text-align: center;
+        margin-top: 50px;
+        li{
+            display: inline-block;
+            margin-left: 3px;
+            margin-right: 3px;
+            &.slick-active{
+                button{
+                    background-color: $green;
+                }
+            }
+            button{
+                border-radius: 50%;
+                background-color: rgb(232, 232, 232);
+                border: none;
+                font-size: 0;
+                width: 16px;
+                height: 16px;
+                cursor: pointer;
+                outline: none;
+            }
+        }
+    }
+}
 
-  
+
+// end product-slider
+
