--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,15 +1,31 @@
 html{
     box-sizing: border-box;
 }
+
 *,
 *::before,
 *::after{
     box-sizing: inherit;
 }
+html,
+body {
+	height: 100%;
+}
 a{
     display: inline-block;
     text-decoration: none;
     color: $text;
+}
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.content {
+	flex: 1 0 auto;
+}
+.footer {
+	flex: 0 0 auto;
 }
 ul,
 li{
@@ -40,7 +56,9 @@ body{
     padding: 0 15px;
     }
 }
-
+.page-content{
+    background-color: $grey;
+}
 .title{
     text-align: center;
     color: $bg;
@@ -53,4 +71,34 @@ body{
 .rate-star{
     display: inline-block;
     margin-right: 13px;
+}
+.breadcrumbs{
+    &__inner{
+        padding: 45px 0 40px;
+    }
+    &__list{
+        li{
+            display: inline-block;
+            position: relative;
+            
+            & + li{
+                padding-left: 24px;
+                &::before{
+                    content: '-';
+                    position: absolute;
+                    left: 8px;
+                    color: $green;
+                }
+            }
+            &:last-child{
+                a,
+                span{
+                    color: $bg;
+                }
+            }
+        }
+        a{
+            color: #b0bec5;
+        }
+    }
 }
