--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -64,7 +64,7 @@ body{
     color: $bg;
     @include f700;
     font-weight: 700;
-    font-style: 36px;
+    font-size: 36px;
     line-height: 60px;
     margin-bottom: 30px;
 }
@@ -100,5 +100,17 @@ body{
         a{
             color: #b0bec5;
         }
+    }
+}
+.angle-right{
+    position: relative;
+    padding-left: 15px;
+    &::before{
+        content: "\f105";
+        font-family: 'icomoon';
+        position: absolute;
+        left: 0;
+        color: $green;
+        font-size: 14px;
     }
 }
