--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -28,7 +28,8 @@
 .header__btn-login{
     background-color: $green;
 }
-.header__btn-register{
+.header__btn-register,
+.header__btn-Logout{
     background-color: $red;
     margin-left: 7px;
 }
@@ -51,6 +52,256 @@
         color: #fff;
         font-size: 14px;
     }
+}
+.header__circle{
+    &.active{
+        display: block;
+    }
+    display: none;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: #ebebeb;
+    position: relative;
+    &::before{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #a0a0a0;
+        font-size: 14px;
+    }
+    span{
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        border-radius: 50%;
+        text-align: center;
+        line-height: 18px;
+        right: -7px;
+        top: -7px;
+        font-size: 11px;
+        color: #fff;
+    }
+}
+.header__box{
+    display: flex;
+    align-items: center;
+}
+.notification{
+    span{
+        background-color: $yellow;
+    }
+}
+.message{
+    span{
+        background-color: $tomato;
+    }
+}
+.basket{
+    span{
+        background-color: $green;
+    }
+}
+.header__btn-login--off{
+    display: none;
+}
+.header__btn-Logout{
+    display: none;
+    &.header__btn-login--on{
+        display: block;
+    }
+}
+.user{
+    margin-left: 20px;
+    margin-right: 25px;
+    padding-right: 20px;
+    position: relative;
+    &::before{
+        content: "\f107";
+        position: absolute;
+        font-family: 'icomoon';
+        font-size: 16px;
+        color: #707070;
+        top: 0;
+        right: 0;
+    }
+    &__inner{
+        display: flex;
+        align-items: center;
+    }
+    &__images{
+        margin-right: 15px;
+        width: 34px;
+        height: 34px;
+        overflow: hidden;
+        border-radius: 50%;
+    }
+    &__info{
+        font-size: 14px;
+        line-height: 24px;
+    }
+    &__name{
+        @include f500;
+        color: #222;
+    }
+    &__money{
+        color: $green;
+        @include f700;
+    }
+}
+.user__menu{
+    top: 69px;
+    left: 20px;
+    border: 0 solid #ccc;
+    position: absolute;
+    background-color: #fff;
+    padding: 0 20px;
+    width: 158px;
+    transition: all .3s;
+    height: 0;
+    overflow: hidden;
+    a{
+        font-size: 12px;
+        color: #546e7a;
+        margin-bottom: 15px;
+    }
+}
+.circle__menu{
+    position: absolute;
+    z-index: 1;
+}
+.user__box,
+.basket__box,
+.message__box,
+.notification__box{
+    position: relative;
+    height: 90px;
+    margin-top: 40px;
+    &:hover{
+        .user__menu{
+            height: auto;
+            border-width: 1px;
+            padding: 20px;
+            overflow: auto;
+        }
+    }
+}
+.circle__menu{
+    border-top: 1px solid #e0e0e0;
+    top: 62px;
+    right: 0;
+    height: 0;
+    overflow: hidden;
+    transition: all .3s;
+}
+.basket__box,
+.message__box,
+.notification__box{
+    margin-top: 54px;
+    margin-left: 15px;
+    &:hover{
+        .header__circle::before{
+            color: $bg;
+        }
+        .circle__menu{
+            overflow: hidden;
+            height: auto;
+        }
+        .circle__item{
+            padding: 23px 23px;
+            border-width: 1px;
+        }
+    }
+}
+.circle__item{
+    background-color: #fff;
+    border: 0px solid #e0e0e0;
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-top: none;
+    padding: 0 23px;
+    transition: all .3s;
+    display: flex;
+    align-items: center;
+    width: 270px;
+    position: relative;
+    &::before{
+        position: absolute;
+        top: 27px;
+        right: 28px;
+        color: #b0bec5;
+        font-size: 16px;
+    }
+}
+.circle__images{
+    margin-right: 15px;
+}
+.circle__info-name{
+    @include f500;
+    color: $bg;
+}
+.circle__info-thema{
+    font-size: 12px;
+    color: $green;
+}
+.circle__info-price{
+    @include f500;
+    color: #000;
+    font-size: 16px;
+}
+.circle__info-date{
+    color: #707070;
+    font-size: 10px;
+}
+.basket__summ{
+    padding: 16px 17px 12px;
+    border: 1px solid #e0e0e0;
+    border-top: none;
+    background-color: #fff;
+}
+.basket__title{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 13px;
+    padding-right: 22px;
+    margin-bottom: 15px;
+    @include f700;
+    font-size: 16;
+    color: $bg;
+}
+.basket__btn{
+    @include f700;
+    color: #fff;
+    font-size: 14px;
+    padding: 12px 5px;
+    background-color: $green;
+    text-align: center;
+    width: 100px;
+}
+.basket__btn-checkout{
+    width: 123px;
+    margin-left: 6px;
+    background-color: $red;
+}
+.notification__menu,
+.message__menu{
+    .circle__images{
+        margin-right: 20px;
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+    }
+    .circle__info{
+        line-height: 18px;
+    }
+}
+.icons-color::before{
+    color: $tomato;
+}
+.header__btn-menu,
+.menu__btn{
+    display: none;
 }
 
 // end header
@@ -180,7 +431,7 @@
         display: block;
     }
     &-category{
-        font-style: 14px;
+        font-size: 14px;
         color: $green;
         display: block;
     }
@@ -315,13 +566,13 @@
     }
     &-title{
         margin-bottom: 25px;
-        font-style: 24px;
+        font-size: 24px;
         color: #fff;
         @include f500;
         transition: all .3s;
     }
     &-text{
-        font-style: 15px;
+        font-size: 15px;
     }
 }
 .icosvg-1{
@@ -443,7 +694,7 @@
         max-width: 220px;
     }
     &-title{
-        font-style: 22px;
+        font-size: 22px;
         font-family: 'Roboto', sans-serif;
         font-weight: 700;
         color: #fff;
@@ -475,7 +726,7 @@
         content: '\f041';
         font-family: 'icomoon';
         color: $green;
-        font-style: 18px;
+        font-size: 18px;
         position: absolute;
         left: 0;
     }
@@ -534,7 +785,7 @@
 .footer__form-title{
     margin-bottom: 15px;
     color: #fff;
-    font-style: 20px;
+    font-size: 20px;
 }
 .footer__form{
     position: relative;
@@ -545,7 +796,7 @@
         width: 100%;
         height: 40px;
         color: #fff;
-        font-style: 14px;
+        font-size: 14px;
         padding-left: 13px;
         padding-right: 50px;
         &::placeholder{
@@ -594,7 +845,7 @@
 }
 .aside__title{
     border-bottom: 1px solid #dde3e8;
-    font-style: 20px;
+    font-size: 20px;
     color: $bg;
     padding: 22px 0 19px;
     @include f700;
@@ -834,7 +1085,7 @@ button.icon-unsorted{
         justify-content: center;
         align-items: center;
         background-color: #fff;
-        font-style: 16px;
+        font-size: 16px;
         color: $bg;
         @include f500;
         &.active{
@@ -856,7 +1107,7 @@ button.icon-unsorted{
     .icon-comment-o,
     .icon-heart-o{
         display: inline-block;
-        font-style: 12px;
+        font-size: 12px;
         color: #70838d;
         padding-left: 50px;
         border-left: 1px solid #aeb4bb;
@@ -866,7 +1117,7 @@ button.icon-unsorted{
             color: $bg;
         }
         &::before{
-            font-style: 16px;
+            font-size: 16px;
             color: $green;
             position: absolute;
             left: 20px;
@@ -890,7 +1141,7 @@ button.icon-unsorted{
         }
         .product__item-text{
             display: block;
-            font-style: 14px;
+            font-size: 14px;
             color: #70838d;
             margin-top: 15px;
             margin-bottom: 5px;
@@ -921,3 +1172,9 @@ button.icon-unsorted{
 }
 
 // end product-page
+
+
+
+
+
+@import 'media';
